@@ -48,7 +48,8 @@ or
 
 
 .SH OPTIONS
-.TP \-a
+.TP
+.BI \-a
 Don't do an
 .B ARP
 check on the IP address give to us by the DHCP server. Normally we do this to
